# oresat-template-app

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: frdm_mcxn947_mcxn947_cpu0-pinctrl.dtsi  frdm_mcxn947_mcxn947_cpu0.overlay
objdict/: CO_OD.c  CO_OD.h  batt.eds  batt.md  batt.nxdd  batt.xdd
src/: adc.c  blink.c  dac.c  i2c_sensor.c  main.c
submanifests/: example.yaml
